--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,10 @@
 name: go_flow
-description: A starting point for Dart libraries or applications.
+description: A simple implementation of go-lang's deffer statement, bringing it into dart-lang
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/fmotalleb/go_flow
 
 environment:
   sdk: ^3.1.0
-
-# Add regular dependencies here.
-dependencies:
-  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
