--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,12 +5,13 @@ analyzer:
     strict-raw-types: true
 
   errors:
-    public_member_api_docs: ignore
-    missing_required_param: error
-    missing_return: error
-    unnecessary_statements: ignore
-    always_use_package_imports: ignore
-    record_literal_one_positional_no_trailing_comma: error
+    abstract_late_field: error
+    always_declare_return_types: error
+    ambiguous_import: error
+    ambiguous_export: error
+    ambiguous_extension_member_access: error
+    annotate_overrides: error
+
   exclude:
     - lib/app/l10n/
     - test/.test_coverage.dart
@@ -91,6 +92,7 @@ linter:
     - lines_longer_than_80_chars
     - literal_only_boolean_expressions
     - missing_whitespace_between_adjacent_strings
+
     - no_adjacent_strings_in_list
     - no_default_cases
     - no_duplicate_case_values
@@ -144,6 +146,7 @@ linter:
     - prefer_typing_uninitialized_variables
     - prefer_void_to_null
     - provide_deprecation_message
+    - public_member_api_docs
     - recursive_getters
     - require_trailing_commas
     - secure_pubspec_urls
